<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"/>

    <item
        android:id="@+id/trainingFragment"
        android:icon="@drawable/ic_session"
        android:title="@string/training" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/classesFragment"
        android:icon="@drawable/ic_class"
        android:title="@string/classes" />

    <!-- The "More" item -->
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />


</menu>