<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These items will be hidden and shown in the Bottom Sheet -->
    <item
        android:id="@+id/instrumentsFragment"
        android:icon="@drawable/ic_instrument"
        android:title="@string/instruments"
        android:iconTint="?attr/colorOnSurface" />


    <item
        android:id="@+id/departmentFragment"
        android:icon="@drawable/ic_department"
        android:title="@string/department"
        android:iconTint="?attr/colorOnSurface" />


    <item
        android:id="@+id/classDetailFragment"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/class_detail" />

    <item
        android:id="@+id/classesFragment"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/classes" />

    <item
        android:id="@+id/trainingFragment"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/training" />
</menu>